# onedpipes

./: AGENTS.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md  DECISIONS.md  ENGINE_INTEGRATION_REPORT.md  PRODUCT_SPEC.md  PUBLIC_API.md  TESTING.md  TODO.md
examples/: solver_metrics.rs
src/: duct.rs  gas_properties.rs  lib.rs  main.rs  model.rs  species.rs  state.rs  timestep.rs  validation.rs
src/boundaries/: closed_end.rs  junction.rs  mod.rs  open_end.rs  valve_orifice.rs
src/solvers/: lax_wendroff.rs  mac_cormack.rs  mod.rs
tests/: api.rs  boundaries.rs  external_coupling.rs  junction.rs  organ_pipe.rs  orifice.rs  sod.rs  solver_parity.rs  variable_area.rs
